--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,11 +4,12 @@
     justify-content: center;
     align-items: center;
     margin: 2rem 3rem;
-    height: 80vh;
+    height: 75vh;
 }
 .img__photo{
     border-radius: 100%;
     opacity: 0.8;
+    height: 300px;
 }
 .home__text{
     display: flex;
@@ -27,5 +28,5 @@
     margin: 2rem;
 }
 .list__img{
-    width: 40px;
+    width: 30px;
 }
